<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/consultar" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_casas"
            android:icon="@drawable/casa"
            android:title="@string/consulta_casas" />
        <item
            android:id="@+id/nav_alquileres"
            android:icon="@drawable/alquiler"
            android:title="@string/consulta_alquileres" />
    </group>

    <item
        android:title="@string/gestionar" />
    <item
            android:id="@+id/nav_personas"
            android:icon="@drawable/persona"
            android:title="@string/gesti_n_de_personas" />
        <item
            android:id="@+id/nav_empresas"
            android:icon="@drawable/empresa"
            android:title="@string/gesti_n_de_empresas" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/contacto"
            android:title="@string/gesti_n_de_contactos" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/servicio"
            android:title="@string/gesti_n_de_servicios" />
        <item
            android:id="@+id/nav_recibos"
            android:icon="@drawable/recibo"
            android:title="@string/gesti_n_de_recibos" />

</menu>
